--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -1,4 +1,9 @@
 a{
-    text-decoration: none;
-    color:#212529 ;
+    text-decoration: none;   
+}
+p{
+    margin-bottom: 0;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
+    margin-bottom: 0;
 }
