--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,75 +9,74 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  
-  
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
-
 <body>
-   <nav class="nav d-flex flex-column">
-    <a href="#">
-      <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/2b326fe971cd296bd54667a9b4a63c4b0f19fab3/week5/logo-ANSWER.svg" alt="ANSWER">
-    </a>
-  
-  
-    <ul class="list-unstyled">
-      <li >
-        <a href="#" class="d-flex align-items-center">
-        <span class="material-icons">
-          insert_chart_outlined
-          </span>
-          Dashboard
-      </a>
-    </li>
-      <li><a href="#" class="d-flex align-items-center">
-        
-  <span class="material-icons">
-    question_answer
-    </span>
-      Question
-      </a>
-    </li>
-      <li><a href="#" class="d-flex align-items-center">
-        <span class="material-icons">
-          assignment
-          </span>Assignment
-      </a>
-    </li>
-      <li><a href="#" class="d-flex align-items-center">
-        <span class="material-icons">
-          video_library
-          </span>
-           Course
-      </a>
-    </li>
-      <li><a href="#" class="d-flex align-items-center"> 
-        <span class="material-icons">
-          people
-          </span>Admin
-      </a>
-    </li>
-      <li><a href="#" class="d-flex align-items-center">
-        
-  <span class="material-icons">
-    settings
-    </span>Settings
-      </a>
-    </li>
-    </ul>
-    <%- contents %>
+      <nav class="nav d-flex flex-column justify-content-between  bg-light pt-3 pb-5  ps-3">
+        <div>
+          <h1 class="title">
+            <a href="#" class="mb-3">
+              <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/2b326fe971cd296bd54667a9b4a63c4b0f19fab3/week5/logo-ANSWER.svg" alt="ANSWER">
+            </a>
+          </h1>
+          <ul class=" nav-list list-unstyled">
+            <li >
+              <a href="#" class="d-flex align-items-center  fw-bolder">
+              <span class="material-icons me-3">
+                insert_chart_outlined
+                </span>
+                Dashboard 
+            </a>
+          </li>
+            <li>
+              <a href="#" class="d-flex align-items-center  fw-bolder">
+                  <span class="material-icons me-3">
+                      question_answer
+                  </span>
+                    Question
+              </a>
+          </li>
+            <li><a href="#" class="d-flex align-items-center  fw-bolder">
+              <span class="material-icons me-3 font-bold">
+                assignment
+                </span>Assignment
+            </a>
+          </li>
+            <li><a href="#" class="d-flex align-items-center  fw-bolder">
+              <span class="material-icons me-3">
+                video_library
+                </span>
+                 Course
+            </a>
+          </li>
+            <li class="" ><a href="#" class="d-flex align-items-center fw-bolder"> 
+              <span class="material-icons me-3">
+                people
+                </span>Admin
+            </a>
+          </li>
+            <li>
+              <a href="#" class="d-flex align-items-center fw-bolder"> 
+                <span class="material-icons me-3">
+                    settings
+                </span>Settings
+              </a>
+          </li>
+          </ul> 
+        </div>
+        <div class="user d-flex align-items-center">
+           <div class="user-img me-3"></div>
+           <div>
+             <p class="mb-1 fw-bolder">Andy Chen</p>
+             <a href="mailto:andy0401@mail.com" class="text-secondary">andy0401@mail.com</a>
+           </div>
+        </div>
+      </nav>
+      <%- contents %>
 
-   </nav>
-
-  
-
-
-<!-- <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week5/andychen.jpeg?raw=true" alt="andychen"> -->
- 
   <script src="./assets/js/vendors.js"></script>
   <script src="./assets/js/all.js"></script>
 </body>
-
 </html>
